<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:padding="@dimen/activity_padding">

    <Button
        android:id="@+id/button_file_op"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/button_margin"
        android:layout_marginTop="@dimen/button_margin"
        android:padding="@dimen/button_padding"
        android:text="@string/file_io"
        android:theme="@style/AppTheme.Button" />

    <Button
        android:id="@+id/button_network_op"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="@dimen/button_padding"
        android:text="@string/network_io"
        android:theme="@style/AppTheme.Button" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/version"
        android:padding="@dimen/button_padding" />
</LinearLayout>
