<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="@dimen/activity_padding">

    <EditText
        android:id="@+id/name_of_file"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/name_of_file" />

    <EditText
        android:id="@+id/text_to_save"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/enter_text_to_save"
        android:inputType="textCapSentences|textMultiLine"
        android:maxLines="4" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:layout_marginTop="16dp"
        android:gravity="center"
        android:orientation="horizontal">

        <Button
            android:id="@+id/save_text_button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/save"
            android:theme="@style/AppTheme.Button" />

        <Button
            android:id="@+id/open_file_button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/open"
            android:theme="@style/AppTheme.Button" />
    </LinearLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

        <TextView
            android:id="@+id/text_to_show"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:visibility="gone" />
    </ScrollView>


</LinearLayout>